--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,7 +1,8 @@
-.back-button {
-  padding: 4px 12px 4px 12px;
-  color: whitesmoke;
-  background-color: dodgerblue;
-  border: none;
-  border-radius: 4px;
-}
+
+// .movieImage {
+//   height: auto;
+//   width: auto;
+//   position: relative;
+// margin: 8px 0px; 
+//   z-index: 0;
+// }
