updated navbar layout and login/signup views

--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,8 +1,9 @@
+.director {
+  font-weight: bold;
+}
 
-// .movieImage {
-//   height: auto;
-//   width: auto;
-//   position: relative;
-// margin: 8px 0px; 
-//   z-index: 0;
-// }
+.genre {
+  // color: #604CC3;
+  font-weight: bold;
+font-style: italic;
+}
