--- a/src/index.scss
+++ b/src/index.scss
@@ -16,10 +16,17 @@ h3 {
  color: #ff8551;
 }
 
+.navbar {
+  position: relative;
+  top: 0;
+  z-index: 999;
+  }
+
 .navbar-brand {
   font-size: 30px;
   color: $tertiary;
 }
+
 
 
 .card{
@@ -29,4 +36,5 @@ h3 {
    color: #ff8551;
 }
 }
+
 
