--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -5,4 +5,13 @@
 .favButton {
   background-color: #98cdd2;
   border: whitesmoke;
+  float: left;
+  margin-top: 10px;
+  margin-left: 17%;
+}
+
+.unfavButton {
+  float: left;
+  margin-top: 10px;
+  margin-left: 10%;
 }
