moved movie-card css to index scss

--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,17 +1,17 @@
-.movieLink {
-  color: #d29bcd;
-}
+// .movieLink {
+//   color: #d29bcd;
+// }
 
-.favButton {
-  background-color: #98cdd2;
-  border: whitesmoke;
-  float: left;
-  margin-top: 10px;
-  margin-left: 17%;
-}
+// .favButton {
+//   background-color: #98cdd2;
+//   border: whitesmoke;
+//   float: left;
+//   margin-top: 10px;
+//   margin-left: 17%;
+// }
 
-.unfavButton {
-  float: left;
-  margin-top: 10px;
-  margin-left: 10%;
-}
+// .unfavButton {
+//   float: left;
+//   margin-top: 10px;
+//   margin-left: 10%;
+// }
